# MyGarbage

./: CMakeLists.txt  README.txt  main.cpp
inc/: MyPlayer.h  audio.h  clock.h  demuxer.h  logger.h  proxy.h  tools.h  video.h
src/: MyPlayer.cpp  audio.cpp  clock.cpp  demuxer.cpp  logger.cpp  proxy.cpp  tools.cpp  video.cpp
